# ds-aa-cub-hurricanes

./: .gitignore  CLAUDE.md  Makefile  README.md  Report.qmd  TESTING.md  databricks.yml  ds-aa-cub-hurricanes.Rproj  pyproject.toml  pytest.ini  quarto-email-template.html  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  test_download_chirps_gefs.py
book_cub_hurricanes/: _publish.yml  _quarto.yml  appendix_check_quantile_calc.qmd  appendix_methodology_map.qmd  appendix_population_data.qmd  book_cub_hurricanes.Rproj  chirps_gefs.qmd  chirps_gefs_raster_processing.qmd  combine_imerg_ibtracs.qmd  email_setup_prep.qmd  era5_soil_moisture.qmd  ibtracs.qmd  imerg.qmd  index.qmd  intro.qmd  monitoring.qmd  plot_optimization.qmd  references.bib  references.qmd  summary.qmd  threestage_trig_plot.qmd  threestage_trigger_opt.qmd  zma.qmd
data-raw/: 01_chirps_daily_mean.R
databricks/: README.md  run_monitor_job.py
docs/: github-actions-setup.md  methodology.md
exploration/: chirps.ipynb  chirps.md  chirps_gefs.ipynb  chirps_gefs.md  chirpsgefs_skill.ipynb  chrips_gefs_check.ipynb  chrips_gefs_check.md  combine_imerg_ibtracs.ipynb  combine_imerg_ibtracs.md  hist_fcast_plotting.ipynb  hist_fcast_plotting.md  hist_monitor_plotting.ipynb  hist_monitor_plotting.md  historical_monitoring.ipynb  historical_monitoring.md  ibtracs.ipynb  ibtracs.md  imerg.ipynb  imerg.md  imerg_aggregation.ipynb  imerg_aggregation.md  imerg_quantiles.ipynb  imerg_quantiles.md  impact.ipynb  impact.md  longterm_rainfall.ipynb  longterm_rainfall.md  melissa_chirps_gefs.ipynb  (+20 more)
(+66 files in other folders)
