[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-aa-cub-hurricanes"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "xarray>=2025.4.0",
    "rioxarray>=0.19.0",
    "matplotlib>=3.10.3",
    "plotly>=5.24.1",
    "kaleido==0.2.1",
    "numpy>=2.1.3",
    "pytz>=2024.2",
    "html2text>=2024.2.26",
    "Jinja2>=3.1.6",
    "ocha-stratus>=0.1.2",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.0.0",
    "nbclient>=0.8.0",
    "nbformat>=5.7.0",
    "ipykernel>=6.25.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pillow>=10.0.0",
    "pyarrow>=14.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "marimo>=0.10.0",
    "auto-mix-prep>=0.2.0",
    "great-tables>=0.21.0",
]

[dependency-groups]
dev = [
    "black==24.3.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "jupyter-black==0.3.4",
    "pre-commit==3.8.0",
    "jupytext==1.16.3",
    "python-dotenv==1.0.1",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.6.0",
    "coverage==7.6.1",
    "ruff>=0.15.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.marimo.runtime]
output_max_bytes = 20_000_000

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
